
5.1.0 -> 5.2a0:
    - jbj: add %_build_iconsize macro to permit configuration.
    - jbj: trash-and-restore macro config for multiple CLI arg builds.
    - rpm.org: use same code for creating the digest object on iteration and method call,
    - jbj: rpmrepo: correct requiressqlentry tag name typo.
    - jbj: fix: handle '%{arch}\' with \ at end-of-string correctly.
    - jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
    - jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
    - jbj: tests: verify rpmrepo XML spewage using popt-1.14.
    - jbj: tests: verify XML/YAML markup queries using popt-1.14.
    - jbj: tests: download popt-1.14 packages for use in tests.
    - jbj: yaml: fix: single element string arrays had extra "- ".
    - jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
    - jbj: add expanded build scripts for --specsrpm --queryformat spewage.
    - jbj: update Russian PO file (from Translation Project).
    - jbj: rpmdb: fix: limit RUNRECOVERY attempts, not every lazy open.
    - jbj: make sure the open path is set when using [bgl]zdOpen vector too.
    - jbj: lzdio: rework the layering to be more similar to gzdio/bzdio.
    - jbj: rpmrepo: fix: --lzma segfault, lzdFdopen was not saving path.
    - jbj: permit upgrade erasure of old -debuginfo iff all other packages
	built from same *.src.rpm are not present. Note that this patch
	assumes that -debuginfo will be added after all other packages
	built from same *.src.rpm.
    - jbj: add automagic erasures of -debuginfo packages (#447708).
    - jbj: enable -lgcrypt through ./devtool system.
    - jbj: hdrfmt: achieve coverage over new header format extensions.
    - jbj: rpmrepo: add baseurl to the repo markup.
    - jbj: rpmrepo: populate sqlite schema with PACKAGESIZE and PACKAGEDIGEST.
    - jbj: simple parameterized namespace URI for Pkgid/Hdrid UUID generation.
    - jbj: rpmrepo: compute digests for both compressed & uncompressed