@@ -589,8 +589,14 @@ INPUT                  = @top_srcdir@/Doxyheader \
                          @top_srcdir@/rpmio/fts.c \
                          @top_srcdir@/rpmio/fts.h \
                          @top_srcdir@/rpmio/getpass.c \
+                         @top_srcdir@/rpmio/iosm.c \
+                         @top_srcdir@/rpmio/iosm.h \
                          @top_srcdir@/rpmio/lookup3.c \
+                         @top_srcdir@/rpmio/lzdio.c \
                          @top_srcdir@/rpmio/macro.c \
+                         @top_srcdir@/rpmio/mire.c \
+                         @top_srcdir@/rpmio/mire.h \
+                         @top_srcdir@/rpmio/mount.c \
                          @top_srcdir@/rpmio/poptIO.c \
                          @top_srcdir@/rpmio/rpmbc.c \
                          @top_srcdir@/rpmio/rpmbc.h \
@@ -604,6 +610,8 @@ INPUT                  = @top_srcdir@/Doxyheader \
                          @top_srcdir@/rpmio/rpmhash.h \
                          @top_srcdir@/rpmio/rpmhook.c \
                          @top_srcdir@/rpmio/rpmhook.h \
+                         @top_srcdir@/rpmio/rpmImpl.c \
+                         @top_srcdir@/rpmio/rpmImpl.h \
                          @top_srcdir@/rpmio/rpmio.c \
                          @top_srcdir@/rpmio/rpmio.h \
                          @top_srcdir@/rpmio/rpmio_internal.h \
@@ -665,7 +673,13 @@ INPUT                  = @top_srcdir@/Doxyheader \
                          @top_srcdir@/python/rpmte-py.h \
                          @top_srcdir@/python/rpmts-py.c \
                          @top_srcdir@/python/rpmts-py.h \
-                         @top_srcdir@/tools/rpmdeps.c
+                         @top_srcdir@/tools/rpm2cpio.c \
+                         @top_srcdir@/tools/rpmcache.c \
+                         @top_srcdir@/tools/rpmcmp.c \
+                         @top_srcdir@/tools/rpmdeps.c \
+                         @top_srcdir@/tools/rpmdigest.c \
+                         @top_srcdir@/tools/rpmmtree.c \
+                         @top_srcdir@/tools/rpmrepo.c
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
